# Attrition-Risk-Analyzer

./: .gitignore  README.md
.github/workflows/: deploy-frontend.yml  download-libgomp.yml
backend/: .gitignore  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/services/: predictor.py
backend/artifacts/: attrition_artifacts.pkl  feature_importance.csv  model_metrics.json
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/common/: page.test.ts
frontend/src/lib/components/Spinner/: Spinner.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/csv/: +page.svelte
frontend/src/routes/feature-importance/: +page.svelte
frontend/src/routes/metrics/: +page.svelte
frontend/src/routes/predict/: +page.svelte
