[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "pandas>=3.0.3",
    "scikit-learn==1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
